[tool.poetry]
name = "m5_forecasting_accuracy"
version = "0.1.0"
description = ""
authors = ["Rui Konuma <17187586+louis1022@users.noreply.github.com>"]
readme = "README.md"
packages = [
    { include = "tasks.py" },
]

[tool.poetry.scripts]
new-exp = "tasks:CreateNewExperiment"
reduce-data = "tasks:ReduceData"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.18.2"
pandas = "^1.0.3"
sklearn = "^0.0"
seaborn = "^0.10.0"
jupyterlab = "^2.0.1"
ipywidgets = "^7.5.1"
matplotlib = "^3.2.1"
tqdm = "^4.43.0"
numba = "^0.48.0"
jupyter = "^1.0.0"
workalendar = "^10.0.0"
xgboost = "^1.1.1"
optuna = "^1.5.0"
catboost = "^0.23.2"
missingno = "^0.4.2"

[tool.poetry.dev-dependencies]
pycodestyle = "^2.5.0"
autopep8 = "^1.5"
ipykernel = "^5.2.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
